tests/snapshots/run_wpt_conformance__coreml_add_float32_broadcast_1D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "add.https.any.js",
    "add float32 broadcast 1D to 4D",
    "coreml",
    "PASS",
)
