tests/snapshots/run_wpt_conformance__coreml_add_float32_with_special_character_names.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
add.https.any.js add float32 with special character names, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: (null)

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    🤦🏼‍♂️124DS#!F: f32[1];
  }

  consts {
    operand_0: f32[1] @bytes([244, 168, 178, 66]);
  }

  nodes {
    [output] = add(operand_0, 🤦🏼‍♂️124DS#!F, label="");
  }

  outputs { output; }
}
