tests/snapshots/run_wpt_conformance__coreml_averagePool2d_float16_4D_constant_tensor_all_positive_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
averagePool2d.https.any.js averagePool2d float16 4D constant tensor all positive default options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type avg_pool: Required param 'pad' is missing

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[1, 2, 5, 5] @bytes([190, 77, 226, 84, 216, 72, 106, 82, 6, 80, 122, 85, 116, 85, 240, 80, 2, 85, 28, 73, 147, 82, 167, 61, 250, 73, 80, 85, 13, 84, 129, 85, 171, 73, 106, 84, 78, 85, 241, 84, 84, 71, 127, 80, 23, 73, 168, 61, 226, 84, 186, 85, 26, 84, 229, 82, 156, 76, 43, 82, 211, 75, 64, 84, 22, 77, 175, 78, 14, 84, 210, 81, 249, 84, 87, 68, 198, 80, 168, 81, 16, 85, 57, 84, 7, 70, 114, 79, 83, 83, 122, 64, 65, 75, 76, 84, 199, 84, 226, 77]);
  }

  nodes {
    [averagePool2dOutput] = averagePool2d(operand_0, dilations=[], label="", layout="", outputShapeRounding="", outputSizes=null, padding=[], strides=[], windowDimensions=null);
  }

  outputs { averagePool2dOutput; }
}
